--- a/FaveAssessment/Modules/Movies/View/Cells/MovieTableViewCell.xib
+++ b/FaveAssessment/Modules/Movies/View/Cells/MovieTableViewCell.xib
@@ -29,52 +29,41 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TSd-3v-acT">
                                 <rect key="frame" x="60" y="42" width="331" height="73"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" text="###title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zkl-2m-lmU">
-                                        <rect key="frame" x="8" y="0.0" width="323" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" text="--" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zkl-2m-lmU">
+                                        <rect key="frame" x="8" y="-8.5" width="323" height="24"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" text="###2019 | 2h 41m" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xb-C8-8P6">
-                                        <rect key="frame" x="8" y="32" width="323" height="17"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="iRb-bX-Ei7">
+                                        <rect key="frame" x="8" y="25.5" width="16" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="16" id="lgL-nf-JiM"/>
+                                            <constraint firstAttribute="height" constant="16" id="pAM-Od-Ksl"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFy-JC-heC">
+                                        <rect key="frame" x="29" y="25" width="302" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="LiM-4Z-z8p">
-                                        <rect key="frame" x="8" y="57" width="66.5" height="16"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="iRb-bX-Ei7">
-                                                <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="16" id="lgL-nf-JiM"/>
-                                                    <constraint firstAttribute="height" constant="16" id="pAM-Od-Ksl"/>
-                                                </constraints>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="###8.2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFy-JC-heC">
-                                                <rect key="frame" x="20" y="0.0" width="46.5" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="3xb-C8-8P6" firstAttribute="leading" secondItem="TSd-3v-acT" secondAttribute="leadingMargin" id="DkQ-Id-3Wb"/>
-                                    <constraint firstAttribute="trailing" secondItem="3xb-C8-8P6" secondAttribute="trailing" id="EDM-Dz-liI"/>
-                                    <constraint firstAttribute="bottom" secondItem="LiM-4Z-z8p" secondAttribute="bottom" id="NQW-6R-f4Q"/>
-                                    <constraint firstItem="3xb-C8-8P6" firstAttribute="top" secondItem="Zkl-2m-lmU" secondAttribute="bottom" constant="8" id="VZ2-H5-852"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LiM-4Z-z8p" secondAttribute="trailing" id="WmV-OL-RJP"/>
-                                    <constraint firstItem="Zkl-2m-lmU" firstAttribute="top" secondItem="TSd-3v-acT" secondAttribute="top" id="fWk-xm-bRK"/>
-                                    <constraint firstItem="3xb-C8-8P6" firstAttribute="bottom" secondItem="LiM-4Z-z8p" secondAttribute="top" constant="-8" id="gH9-zt-EDo"/>
+                                    <constraint firstItem="iRb-bX-Ei7" firstAttribute="top" secondItem="Zkl-2m-lmU" secondAttribute="bottom" constant="10" id="0jw-iJ-P8i"/>
+                                    <constraint firstItem="yFy-JC-heC" firstAttribute="centerY" secondItem="iRb-bX-Ei7" secondAttribute="centerY" id="7Xl-Qh-Qm7"/>
+                                    <constraint firstItem="yFy-JC-heC" firstAttribute="trailing" secondItem="Zkl-2m-lmU" secondAttribute="trailing" id="QIj-yp-Rsx"/>
+                                    <constraint firstItem="yFy-JC-heC" firstAttribute="leading" secondItem="iRb-bX-Ei7" secondAttribute="trailing" constant="5" id="W20-oy-hl9"/>
                                     <constraint firstAttribute="trailing" secondItem="Zkl-2m-lmU" secondAttribute="trailing" id="hSb-WZ-Cej"/>
-                                    <constraint firstItem="LiM-4Z-z8p" firstAttribute="leading" secondItem="TSd-3v-acT" secondAttribute="leadingMargin" id="hyD-cw-nCT"/>
                                     <constraint firstItem="Zkl-2m-lmU" firstAttribute="leading" secondItem="TSd-3v-acT" secondAttribute="leadingMargin" id="loA-xP-EIy"/>
+                                    <constraint firstItem="iRb-bX-Ei7" firstAttribute="leading" secondItem="Zkl-2m-lmU" secondAttribute="leading" id="yZw-nk-5mS"/>
                                 </constraints>
                             </view>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="Zkl-2m-lmU" firstAttribute="top" secondItem="zke-rG-zRY" secondAttribute="top" constant="5" id="pqO-DU-7a0"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
@@ -86,10 +75,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="poster" destination="zke-rG-zRY" id="Otq-Yl-tXM"/>
-                <outlet property="rating" destination="yFy-JC-heC" id="PWi-NL-ZQ0"/>
-                <outlet property="subtitle" destination="3xb-C8-8P6" id="9wd-y5-Ewe"/>
-                <outlet property="title" destination="Zkl-2m-lmU" id="Mas-sJ-Ynr"/>
+                <outlet property="posterImageView" destination="zke-rG-zRY" id="YWp-lC-FLN"/>
+                <outlet property="ratingLabel" destination="yFy-JC-heC" id="rDF-hX-xRD"/>
+                <outlet property="titleLabel" destination="Zkl-2m-lmU" id="XB8-hd-lDE"/>
             </connections>
             <point key="canvasLocation" x="223.18840579710147" y="196.54017857142856"/>
         </tableViewCell>
