--- a/FaveAssessment/Modules/Movies/View/Cells/MovieTableViewCell.xib
+++ b/FaveAssessment/Modules/Movies/View/Cells/MovieTableViewCell.xib
@@ -36,14 +36,26 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="iRb-bX-Ei7">
-                                        <rect key="frame" x="8" y="25.5" width="16" height="16"/>
+                                        <rect key="frame" x="8" y="28.5" width="16" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="lgL-nf-JiM"/>
                                             <constraint firstAttribute="height" constant="16" id="pAM-Od-Ksl"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFy-JC-heC">
-                                        <rect key="frame" x="29" y="25" width="302" height="17"/>
+                                        <rect key="frame" x="29" y="28" width="13" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZR-a1-iJb">
+                                        <rect key="frame" x="316.5" y="28" width="6.5" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CnC-fO-vIf">
+                                        <rect key="frame" x="29" y="49.5" width="294" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -51,11 +63,15 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="iRb-bX-Ei7" firstAttribute="top" secondItem="Zkl-2m-lmU" secondAttribute="bottom" constant="10" id="0jw-iJ-P8i"/>
+                                    <constraint firstItem="iRb-bX-Ei7" firstAttribute="top" secondItem="Zkl-2m-lmU" secondAttribute="bottom" constant="13" id="0jw-iJ-P8i"/>
+                                    <constraint firstItem="CnC-fO-vIf" firstAttribute="top" secondItem="iRb-bX-Ei7" secondAttribute="bottom" constant="5" id="12K-uN-2zX"/>
                                     <constraint firstItem="yFy-JC-heC" firstAttribute="centerY" secondItem="iRb-bX-Ei7" secondAttribute="centerY" id="7Xl-Qh-Qm7"/>
-                                    <constraint firstItem="yFy-JC-heC" firstAttribute="trailing" secondItem="Zkl-2m-lmU" secondAttribute="trailing" id="QIj-yp-Rsx"/>
+                                    <constraint firstItem="OZR-a1-iJb" firstAttribute="centerY" secondItem="yFy-JC-heC" secondAttribute="centerY" id="8Wk-jL-Rd9"/>
+                                    <constraint firstAttribute="trailing" secondItem="OZR-a1-iJb" secondAttribute="trailing" constant="8" id="Gg6-5W-9eG"/>
                                     <constraint firstItem="yFy-JC-heC" firstAttribute="leading" secondItem="iRb-bX-Ei7" secondAttribute="trailing" constant="5" id="W20-oy-hl9"/>
+                                    <constraint firstItem="CnC-fO-vIf" firstAttribute="leading" secondItem="yFy-JC-heC" secondAttribute="leading" id="hQu-kw-j4q"/>
                                     <constraint firstAttribute="trailing" secondItem="Zkl-2m-lmU" secondAttribute="trailing" id="hSb-WZ-Cej"/>
+                                    <constraint firstItem="CnC-fO-vIf" firstAttribute="trailing" secondItem="OZR-a1-iJb" secondAttribute="trailing" id="i7m-fm-XJr"/>
                                     <constraint firstItem="Zkl-2m-lmU" firstAttribute="leading" secondItem="TSd-3v-acT" secondAttribute="leadingMargin" id="loA-xP-EIy"/>
                                     <constraint firstItem="iRb-bX-Ei7" firstAttribute="leading" secondItem="Zkl-2m-lmU" secondAttribute="leading" id="yZw-nk-5mS"/>
                                 </constraints>
@@ -75,8 +91,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="genreLabel" destination="CnC-fO-vIf" id="P3N-eP-Qjk"/>
                 <outlet property="posterImageView" destination="zke-rG-zRY" id="YWp-lC-FLN"/>
                 <outlet property="ratingLabel" destination="yFy-JC-heC" id="rDF-hX-xRD"/>
+                <outlet property="releaseDateLabel" destination="OZR-a1-iJb" id="K6k-lX-5BN"/>
                 <outlet property="titleLabel" destination="Zkl-2m-lmU" id="XB8-hd-lDE"/>
             </connections>
             <point key="canvasLocation" x="223.18840579710147" y="196.54017857142856"/>
